# simp

./: A.txt  B.txt  CMakeLists.txt  I.txt  P.txt  numbersI.txt  numbersI322.txt  numbersI500.txt  numbersP.txt  numbersP322.txt  numbersP500.txt
src/: BezierCurve.cpp  BezierCurve.h  BezierSimplifier.cpp  BezierSimplifier.h  BezierWidget.cpp  BezierWidget.h  Component.cpp  Component.h  CubicVertexRemoval.cpp  CubicVertexRemoval.h  CubicVertexRemovalC0.cpp  CubicVertexRemovalC0.h  KdCurves3to2.cpp  KdCurves3to2.h  KdCurves4to3.cpp  KdCurves4to3.h  Simplify2to1.cpp  Simplify2to1.h  Simplify4to3.cpp  Simplify4to3.h  Utils.cpp  Utils.h  main.cpp  testFun.h
